--- a/functional-kotlin-effects/pom.xml
+++ b/functional-kotlin-effects/pom.xml
@@ -9,7 +9,6 @@
         <relativePath>..</relativePath>
     </parent>
 
-    <groupId>ch.sbb</groupId>
     <artifactId>functional-kotlin-effects</artifactId>
     <name>Functional Kotlin-Effects</name>
 
@@ -20,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
+            <artifactId>kotlin-test-junit</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
